--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
@@ -14,11 +16,17 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bootstrap": "^5.2.2",
+    "express": "^4.18.1",
+    "firebase": "^9.10.0",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.37",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -33,6 +41,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.7.2"
+  },
+  "engines": {
+    "node": "v14.17.4",
+    "npm": "8.18.0"
   }
 }
